tests/baselines/reference/decrementOperatorWithEnumType.errors.txt
tests/cases/conformance/expressions/unaryOperators/decrementOperator/decrementOperatorWithEnumType.ts(6,31): error TS2540: Cannot assign to 'A' because it is a constant or a read-only property.
tests/cases/conformance/expressions/unaryOperators/decrementOperator/decrementOperatorWithEnumType.ts(7,29): error TS2540: Cannot assign to 'A' because it is a constant or a read-only property.
tests/cases/conformance/expressions/unaryOperators/decrementOperator/decrementOperatorWithEnumType.ts(10,9): error TS2540: Cannot assign to 'A' because it is a constant or a read-only property.
tests/cases/conformance/expressions/unaryOperators/decrementOperator/decrementOperatorWithEnumType.ts(12,1): error TS2542: Index signature in type 'typeof ENUM1' only permits reading.
tests/cases/conformance/expressions/unaryOperators/decrementOperator/decrementOperatorWithEnumType.ts(12,7): error TS2304: Cannot find name 'A'.


==== tests/cases/conformance/expressions/unaryOperators/decrementOperator/decrementOperatorWithEnumType.ts (5 errors) ====
    // -- operator on enum type
    
    enum ENUM1 { A, B, "" };
    
    // expression
    var ResultIsNumber1 = --ENUM1["A"];
                                  ~~~
!!! error TS2540: Cannot assign to 'A' because it is a constant or a read-only property.
    var ResultIsNumber2 = ENUM1.A--;
                                ~
!!! error TS2540: Cannot assign to 'A' because it is a constant or a read-only property.
    
    // miss assignment operator
    --ENUM1["A"];
            ~~~
!!! error TS2540: Cannot assign to 'A' because it is a constant or a read-only property.
    
    ENUM1[A]--;
    ~~~~~~~~
!!! error TS2542: Index signature in type 'typeof ENUM1' only permits reading.
          ~
!!! error TS2304: Cannot find name 'A'.